--- a/website/templates/analysis.html
+++ b/website/templates/analysis.html
@@ -5,7 +5,7 @@
       <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
   <body>
-    <div class="detr-app" id="detr-app"></div>
-    <script src="static/detr.bundle.js"></script>
+    <div class="analysis-app" id="analysis-app"></div>
+    <script src="static/analysis.bundle.js"></script>
   </body>
 </html>
